fix: resolve 18 code review issues - security, performance, and documentation
Address all findings from v1.0 code review:
- Critical: eliminate SQL injection in export routes, add Zod validation
- High: atomic Redis rate limiter, SSE connection limit, Anthropic streaming fix
- Medium: shared error classifier, GeminiModel types, time range refresh, seed data
- Low: toast notifications, exact nav match, SSE reconnection, service modularization
- Docs: comprehensive README, updated architecture and codebase docs

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@ dist/
 .turbo/
 .env
 .env.local
+.env.*.local
 *.tsbuildinfo
 .DS_Store
 CLAUDE.md
 .idea/
 .vscode/
+.vercel/
 *.log
 *.lock
 coverage/
@@ -20,4 +22,9 @@ coverage/
 *.swp
 *.swo
 *.swn
+*.db
+*.db-shm
+*.db-wal
+storybook-static/
+playwright-report/
 repomix-output.xml
